--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/laboratory_equipment_management_system?characterEncoding=UTF-8
-    username: root
-    password: Gzx@123
+    url: jdbc:mariadb://192.168.31.23:3306/laboratory_equipment_management_system?characterEncoding=UTF-8
+    username: test
+    password: 23wistestfor509pi
     driver-class-name: org.mariadb.jdbc.Driver
 mybatis:
   type-aliases-package: com.resetful.model
